ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlrun-ingress
  namespace: mlrun
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-dev"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - cl-mlrun-test.tedmosbyisajerk.cc
    secretName: mlrun-tls-secret
  rules:
  - host: cl-mlrun-test.tedmosbyisajerk.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlrun-api
            port:
              number: 8080
